--- a/src/style.css
+++ b/src/style.css
@@ -85,7 +85,7 @@ table {
     font-size: 3rem;
     position: relative;
     bottom:9rem;
-    right: 1rem;
+    right: 0.2rem;
 }
 
 .extra{
@@ -98,18 +98,6 @@ table {
     justify-content: space-between;
     font-family: 'Sono', monospace;
     font-size: 1rem;
-}
-
-.feeling{
-
-}
-
-.wind{
-
-}
-
-.humidity{
-    
 }
 
 .condition{
@@ -134,7 +122,7 @@ table {
 }
 
 input{
-    border-radius: 2rem;
+    border-radius: 0.6rem;
     background-color: rgb(236, 236, 236);
     font-family: 'Chakra Petch', sans-serif;
 }
@@ -143,5 +131,7 @@ input:focus{
     background-color: white;
     color: black;
     font-family: 'Chakra Petch', sans-serif;
+    outline: none;
+    border: 2px solid black;
 }
 
